fix general style and Post not showing

--- a/OSSocial/wwwroot/css/site.css
+++ b/OSSocial/wwwroot/css/site.css
@@ -1,7 +1,4 @@
 
-#whiteText {
-  color: #FFFFFF;
-}
 
 #backgroundVideo {
   position: absolute;
